--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <title>Merasapparel Fashion Brand</title>
-<body class="text-gray-800 bg-gradient-to-b from-white via-gray-50 to-white">
+<body class="text-gray-800 bg-gradient-to-b from-white via-gray-50 to-white overflow-x-hidden">
 
 <!-- nav  -->
 <header class="fixed w-full z-40 bg-white/60 backdrop-blur-md border-b border-gray-100">
@@ -52,7 +52,7 @@
 <a href="#collections" class="text-base">Collections</a>
 <a href="#about" class="text-base">About</a>
 <a href="#contact" class="text-base">Contact</a>
-<a href="#" class="mt-2 inline-flex items-center px-4 py-2 rounded-md text-sm font-semibold bg-accent text-white">Shop Now</a>
+<a href="#collections" class="mt-2 inline-flex items-center px-4 py-2 rounded-md text-sm font-semibold bg-rose-300  text-white">Shop Now</a>
 </div>
 </div>
 </header>
