fix mobile overflow issue

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 </div>
 
 
-<div class="flex items-center gap-3">
+<div class="flex items-center gap-3 sm:px-8">
 <button data-filter="all" class="filterBtn text-sm px-3 py-2 rounded-md glass">All</button>
 <button data-filter="women" class="filterBtn text-sm px-3 py-2 rounded-md">Women</button>
 <button data-filter="men" class="filterBtn text-sm px-3 py-2 rounded-md">Men</button>
