--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Playfair+Display:wght@400;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700;900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="node_modules/aos/dist/aos.css">
+<link rel="icon" type="image/png" href="./src/images/MA1.png">
 
 </head>
 <title>Merasapparel Fashion Brand</title>
@@ -18,7 +20,7 @@
 <div class="max-w-6xl mx-auto px-6 lg:px-8">
 <div class="flex items-center justify-between h-16">
 <a href="#home" class="flex items-center gap-3">
-<div class="w-10 h-10 rounded-full bg-brand flex items-center justify-center text-rose-300 font-bold">MA</div>
+<div class="w-10 h-10 rounded-full bg-brand flex items-center justify-center text-rose-300 text-xl font-bold font-cinzel">MA</div>
 <div>
 <span class="block text-rose-300 font-semibold">Merasapparel</span>
 <span class="block text-xs text-gray-500 -mt-0.5">style you beautiful</span>
@@ -106,7 +108,7 @@
 </div>
 
 
-<div class="flex items-center gap-3 sm:px-8">
+<div class="flex flex-wrap items-center gap-2 sm:px-8">
 <button data-filter="all" class="filterBtn text-sm px-3 py-2 rounded-md glass">All</button>
 <button data-filter="women" class="filterBtn text-sm px-3 py-2 rounded-md">Women</button>
 <button data-filter="men" class="filterBtn text-sm px-3 py-2 rounded-md">Men</button>
@@ -115,9 +117,8 @@
 </div>
 
 <div id="productsGrid" class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-6">
+
 <!-- product card template -->
-
-
 <!-- Card 1 -->
 <article class="product-card bg-white rounded-xl overflow-hidden shadow group" data-category="women">
 <div class="relative">
@@ -273,7 +274,7 @@
 <footer id="contact" class="bg-rose-200 text-white py-8">
 <div class="max-w-6xl mx-auto px-6 lg:px-8 flex flex-col md:flex-row items-center justify-between gap-6">
 <div class="flex items-center gap-3">
-<div class="w-10 h-10 rounded-full bg-gray-900 text-rose-300 flex items-center justify-center font-bold">MA</div>
+<div class="w-10 h-10 rounded-full bg-gray-900 text-rose-300 flex items-center justify-center font-bold text-xl font-bold font-cinzel">MA</div>
 <div>
 <div class="font-semibold text-rose-300">Merasapparel</div>
 <div class="text-sm text-gray-900">Style you beautiful</div>
