made the accessories button mobile responsive

--- a/index.html
+++ b/index.html
@@ -112,7 +112,10 @@
 <button data-filter="all" class="filterBtn text-sm px-3 py-2 rounded-md glass">All</button>
 <button data-filter="women" class="filterBtn text-sm px-3 py-2 rounded-md">Women</button>
 <button data-filter="men" class="filterBtn text-sm px-3 py-2 rounded-md">Men</button>
-<button data-filter="accessories" class="filterBtn text-sm px-3 py-2 rounded-md">Accessories</button>
+<button data-filter="accessories" class="filterBtn text-sm px-3 py-2 rounded-md break-words">
+  Accessories
+</button>
+
 </div>
 </div>
 
